# pycallgraph3

./: .coveragerc  .flake8  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  pyproject.toml  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/gephi/: basic.py  large.py
examples/graphviz/: all.py  basic.py  colors.py  filter.py  grouper.py  import.py  large.py  recursive.py  regexp.py
examples/graphviz/example_with_submodules/: example_with_submodules.py  submodule_two.py
pycallgraph2/: __init__.py  config.py  metadata.py  tracer.py
pycallgraph2/output/: graphviz.py  output.py
pycallgraph3/: __init__.py  config.py  decorators.py
pycallgraph3/output/: gephi.py  graphviz.py  pickle.py
requirements/: development.txt
scripts/: pycallgraph  pycallgraph3
test/: conftest.py  helpers.py  test_color.py  test_config.py  test_decorators.py  test_gephi.py  test_graphviz.py  test_output.py  test_pycallgraph.py  test_script.py  test_trace_processor.py  test_util.py
