[tool.poetry]
name = "pycallgraph3"
version = "1.1.3"
description = "Python Call Graph is a Python module that creates call graph visualizations for Python applications."
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-pep8 = "^1.0.6"
pytest-cov = "^2.10.0"
python-coveralls = "^2.9.3"
flake8 = "^3.8.3"
ipython = "^7.16.1"
urllib3 = "^1.25.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
