[tool.poetry]
name = "pycallgraph3"
version = "1.1.4"
description = "Python Call Graph is a Python module that creates call graph visualizations for Python applications."
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/vmdesenvolvimento/pycallgraph3"
homepage = "https://pycallgraph.com.br"
packages=[
    {include = 'pycallgraph3'}
]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Testing',
    'Topic :: Software Development :: Debuggers',
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-pep8 = "^1.0.6"
pytest-cov = "^2.10.0"
python-coveralls = "^2.9.3"
flake8 = "^3.8.3"
ipython = "^7.16.1"
urllib3 = "^1.25.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
